--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "2.5.0",
-    "socket.io": "0.8.6"
+    "socket.io": "0.8.6",
+    "gravatar": "1.0.3",
+    "timeago":"0.0.2"
   }
 }
